--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
     "name": "grit-tekno/menu",
-    "version": "1.1.1",
+    "version": "1.1",
     "description": "Menu and role management helper.",
-    "keywords": ["menu", "role", "library", "laravel"],
+    "keywords": ["menu", "role", "laravel"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Egideailhami",
+            "name": "Egi Dea Ilhami",
             "email": "Egideailhami@gmail.com"
         }
     ],
@@ -16,20 +16,20 @@
         "yajra/laravel-datatables-oracle":"~8.0"
     },
 	"require-dev": {
-		"phpunit/phpunit": "5.2.*"
+		"phpunit/phpunit": "^7.0"
     },
 	"autoload": {
         "psr-4": {
-            "Egideailhami\\Menu\\": "src/"
+            "GritTekno\\Menu\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Egideailhami\\Menu\\MenuServiceProvider"
+                "GritTekno\\Menu\\MenuServiceProvider"
             ],
             "aliases": {
-                "GritTekno": "Egideailhami\\Menu\\MenuFacade"
+                "GritTekno": "GritTekno\\Menu\\MenuFacade"
             }
         }
     }
