--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "type": "library",
     "require": {
 		"php": ">=5.4",
-        "yajra/laravel-datatables-oracle":"^8.0"
+        "yajra/laravel-datatables-oracle":"~8.0"
     },
 	"require-dev": {
 		"phpunit/phpunit": "^7.0"
